[package]
name = "phoronix-reader-practice"
version = "0.1.0"
authors = ["SHIMIZU Taku <shimizu.taku@gmail.com>"]

[dependencies]
hyper = "*"
select = "*"
term = "*"
getopts = "*"
gtk = { git = "https://github.com/gtk-rs/gtk" }
gdk = { git = "https://github.com/gtk-rs/gdk" }
pango = { git = "https://github.com/gtk-rs/pango" }